# smart-open

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix  smart-open.deb
.github/workflows/: ci.yml
nix/: smart-open.nix
src/: main.rs
src/parsers/: file.rs  git.rs  mod.rs  url.rs
src/utils/: command.rs  config.rs  git.rs  mod.rs  url.rs
