[package]
name = "smart-open"
description = "an intelligent and pluggable version of open"
license = "MIT OR Apache-2.0"
authors = ["Cecilia Sanare <ceci@sanare.dev>"]
version = "0.1.2"
edition = "2021"

[dependencies]
home = "0.5.9"
log = "0.4.20"
open = "5.0.1"
pretty_env_logger = "0.5.0"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "macros" ]}
url = "2.5.0"
